compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__use___wrong_arity.snap
---
source: compiler-core/src/type_/tests/use_.rs
expression: "\nlet f = fn(callback) { callback(1, 2) }\nuse <- f\n123\n"
---
error: Incorrect arity
  ┌─ /src/one/two.gleam:3:1
  │
3 │ use <- f
  │ ^^^    ^
  │ │       
  │ Expected 2 arguments, got 0

This function takes a callback that expects 2 arguments. But none were
provided on the left hand side of `<-`.

See: https://tour.gleam.run/advanced-features/use/
